Fixed tooltip issues on small displays

--- a/plugins/custom-tooltip/assets/css/tooltip.css
+++ b/plugins/custom-tooltip/assets/css/tooltip.css
@@ -124,7 +124,7 @@ h4.tooltip-title {
 }
 
 .modal h4.tooltip-title {
-	font-size: 4rem;
+	font-size: 3.5rem;
 	color: #737373;
 }
 
@@ -207,8 +207,36 @@ h4.tooltip-title {
 
 @media only screen and (max-width:570px) {
 
+	.modal h4.tooltip-title,
+	h4.tooltip-title {
+		font-size: 2.5rem;
+	}
+
+	.tooltip-content.big-font .wrap {
+		font-size: 1.8rem;
+	}
+
+	.toolbar-button,
+	.recipe-button {
+		position: initial;
+	}
+
+	.tooltip-content.click,
+	.tooltip-content.click.above,
 	.tooltip-content.modal {
-		top:0;
+		position: absolute;
+		z-index: 100000;
+		left: 0;
+		top:100px;
+		bottom:initial;
+		right:initial;
+		width:100%;
+		height:auto;
+	}
+
+	p.comment-form-author,
+	p.comment-form-email {
+		display: block;
 	}
 
 }
